Working on the Hero section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="#">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Testomonies</a>
+            <a class="nav-link" href="#">Testimonies</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -36,6 +36,17 @@
       </div>
     </div>
   </nav>
+  <section class="hero align-items-stretch text-center">
+    <div class="hero__main d-flex flex-column justify-content-center align-items-center">
+      <img class="hero__picture rounded-circle" src="img/profile-picture.jpg" alt="Marco Antonio Picture">
+      <h1>B.S. Marco Antonio</h1>
+      <h2>Software Developer &amp; IT Expert</h2>
+    </div>
+    <div class="hero__footer">
+      <img class="hero__footer-img img-fluid" src="img/brand.jpg" alt="My Stack">
+    </div>
+  </section>
+  <!--  Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
